<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutRegister"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="80dp"
            android:src="@drawable/greenivy_logo_text" />

        <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="Login"
            android:textColor="@color/greenify_green"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/request_login_or_register"
            android:textColor="@color/greenify_grey"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="20dp"
            android:alpha="1"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/email"
            android:fontFamily="sans-serif"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/greenify_grey"
            android:textSize="16sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_edit_text">

            <com.rememberdev.greenify.ui.custom.CustomEditTextPassword
                android:id="@+id/ed_login_password"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:background="@color/transparent"
                android:fontFamily="sans-serif"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingHorizontal="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/greenify_grey"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/showPassword"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/showPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_hidden_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="8dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/action_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="Forgot Password?"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <com.rememberdev.greenify.ui.custom.CustomButton
            android:id="@+id/action_login"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="24dp"
            android:alpha="1"
            android:fontFamily="@font/poppins_medium"
            android:lineSpacingMultiplier="1.2"
            android:text="Don't have account?"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/action_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:alpha="1"
            android:fontFamily="@font/poppins_medium"
            android:lineSpacingMultiplier="1.2"
            android:text="Register"
            android:textAlignment="center"
            android:textColor="@color/greenify_green"
            android:textSize="16sp" />

    </LinearLayout>

    <!--    <TextView-->
    <!--        android:id="@+id/copyrightTextView"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="32dp"-->
    <!--        android:layout_marginEnd="32dp"-->
    <!--        android:layout_marginBottom="8dp"-->
    <!--        android:text="@string/copyright"-->
    <!--        android:textSize="14sp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>